--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<head><script defer="defer" src="/gpc/static/js/main.902373c7.js"></script><link href="/gpc/static/css/main.a9c06643.css" rel="stylesheet"></head><div id="root"></div>
+<head><script defer="defer" src="/gpc/static/js/main.902373c7.js"></script><link href="/gpc/static/css/main.a9c06643.css" rel="stylesheet"></head><div id="root"></div><link rel="shortcut icon" href="favicon.ico"/>
