--- a/public/index.html
+++ b/public/index.html
@@ -1,2 +1,3 @@
-<div id="root"></div>
-<link rel="shortcut icon" href="favicon.ico?" />
+<div id="root"><link rel="icon" type="image/x-icon" href="favicon.ico"/></div>
+
+
