tried to fix favicon again

--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,5 @@
-<div id="root"><link rel="icon" type="image/x-icon" href="favicon.ico"/></div>
+<link rel="icon" type="image/x-icon" href="favicon.ico"/>
+<div id="root"></div>
+
 
 
