--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<head><script defer="defer" src="/gpc/static/js/main.7ebeccf5.js"></script><link href="/gpc/static/css/main.28ea53d0.css" rel="stylesheet"></head><div id="root"></div>
+<head><script defer="defer" src="/gpc/static/js/main.4156836c.js"></script><link href="/gpc/static/css/main.3c59d5bf.css" rel="stylesheet"></head><link rel="icon" type="image/x-icon" href="favicon.ico"/><div id="root"></div>
